--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -38,14 +38,14 @@ const url = new URL(Astro.request.url);
 			<span class="text-xl font-bold sm:text-2xl">itaydafna.dev</span>
 			<nav
 				id="navigation-menu"
-				class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
+				class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:-ml-4 sm:mt-1 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
 				aria-label="Main menu"
 			>
 				{
 					MENU_LINKS.map((link) => (
 						<a
 							href={link.path}
-							class="py-4 px-4 sm:py-0 sm:hover:underline"
+							class="px-4 py-4 sm:py-0 sm:hover:underline"
 							aria-current={url.pathname === link.path ? "page" : false}
 							rel="prefetch"
 						>
@@ -67,7 +67,7 @@ const url = new URL(Astro.request.url);
 	>
 		<svg
 			id="line-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 transition-all group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
+			class="absolute left-1/2 top-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 transition-all group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
 			aria-hidden="true"
 			focusable="false"
 			xmlns="http://www.w3.org/2000/svg"
@@ -80,7 +80,7 @@ const url = new URL(Astro.request.url);
 		</svg>
 		<svg
 			id="cross-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 scale-0 text-accent opacity-0 transition-all group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
+			class="absolute left-1/2 top-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 scale-0 text-accent opacity-0 transition-all group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
 			class="text-accent"
 			aria-hidden="true"
 			focusable="false"
