--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,6 +1,7 @@
 ---
 import ThemeToggle from "../ThemeToggle.astro";
 import { MENU_LINKS } from "@/data/constants";
+import profilePic from "../../assets/profile-pic-cropped.jpg";
 
 const url = new URL(Astro.request.url);
 ---
@@ -30,7 +31,7 @@ const url = new URL(Astro.request.url);
 		>
 			<img
 				class="h-14 w-14 rounded-full sm:h-28 sm:w-28"
-				src="/src/assets/profile-pic-cropped.jpg"
+				src="/profile-pic-cropped.jpg"
 				alt="Rounded avatar - Itay Dafna"
 			/>
 		</a>
