--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,10 +19,10 @@ const meta = {
 		</p>
 		<div class="flex justify-center">
 			<div class="hidden sm:inline">
-				<AnimatedProfile size={ProfilePicSize.LARGE} client:load />
+				<AnimatedProfile size={ProfilePicSize.LARGE} client:only />
 			</div>
 			<div class="visible sm:hidden">
-				<AnimatedProfile size={ProfilePicSize.SMALL} client:load />
+				<AnimatedProfile size={ProfilePicSize.SMALL} client:only />
 			</div>
 		</div>
 	</div>
