--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,6 @@
 ---
 import type { SiteMeta } from "@/data/siteMeta";
+import GoogleAnalytics from "./GoogleAnalytics.astro";
 import siteConfig from "@/site-config";
 import "../styles/global.css";
 
@@ -16,6 +17,7 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<GoogleAnalytics />
 
 <!-- Icons / Favicon -->
 <link rel="icon" href="/favicon.ico" sizes="any" />
