extract anchor headings code to util

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -19,6 +19,8 @@ const { headings } = await post.render();
 ---
 
 <script>
+	import { applyAnchorHeadings } from "@/utils";
+
 	const scrollBtn = document.getElementById("to-top-btn") as HTMLButtonElement;
 	const targetHeader = document.getElementById("blog-hero") as HTMLDivElement;
 
@@ -36,37 +38,11 @@ const { headings } = await post.render();
 	const observer = new IntersectionObserver(callback);
 	observer.observe(targetHeader);
 
-	const anchorHeadings = document.querySelectorAll("h2, h3, h4, h5, h6");
-	[...anchorHeadings]
-		.filter((heading: Element) => heading.id !== "table-of-contents")
-		.forEach((heading) => {
-			const anchor = document.createElement("a");
-			anchor.className = "group relative cursor-pointer";
-			anchor.href = `#${heading.id}`;
-			heading.parentNode!.insertBefore(anchor, heading);
-			const linkIcon = document.createElement("div");
-			linkIcon.className = "hidden group-hover:block";
-			linkIcon.innerHTML = ` 
-			<svg 
-				xmlns="http://www.w3.org/2000/svg" 
-				class="inline-block h-6 w-6 absolute bottom-0 -left-6 top-1.5" 
-				aria-hidden="true" 
-				focusable="false" 
-				viewBox="0 0 24 24" 
-				stroke-width="1" stroke="currentColor" 
-				fill="none" 
-				stroke-linecap="round" 
-				stroke-linejoin="round">
-					<path d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z">
-			</svg>
-		`;
-			anchor.appendChild(linkIcon);
-			anchor.appendChild(heading);
-		});
+	applyAnchorHeadings();
 </script>
 
 <BaseLayout meta={{ title, description, articleDate, ogImage: socialImage }}>
-	<div class="items-start gap-x-10 sm:flex">
+	<div class="flex items-start gap-x-10">
 		{
 			!!headings.length && (
 				<aside class="sticky top-20 order-2 -mr-32 hidden basis-64 lg:block">
